# src/main/resources/static/openapi.yaml
@@ -820,6 +820,58 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /order/{orderId}/confirm-booking:
+    post:
+      tags:
+        - Order
+      description: Confirms booking
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: orderId
+          schema:
+            type: string
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Card'
+      responses:
+        204:
+          description: Order was successfuly confirmed and paid
+        400:
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: Tickets with following order id do not exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        405:
+          description: Booking has expired
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        409:
+          description: Order is already paid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 
 # ----------------------------------------------------------------------
 
